--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3.8'
 services:
   jupyter:
     image: jupyter/base-notebook
+    # image: tensorflow:latest-gpu-jupyter
     ports:
       - "8888:8888"
     volumes:
